# internal-platform-sample

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CODE_QUALITY.md  JOB_HANDLERS.md  Makefile  PLATFORM_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  SCRIPTS_ARCHITECTURE.md  SETUP.md  UI_INTEGRATION_COMPLETE.md  UI_STATUS_REPORT.md  WORKSPACE_STRATEGY.md  activate.sh  check-requirements.sh  internal-platform-sample.code-workspace  pyproject.toml
backend/: .env.example  .flake8  DEV_SERVER.md  activate_venv.sh  dev_server.py  docker-compose.dev.yml  init_db.py  internal_platform.db  logging.conf  main.py  pyproject.toml  requirements.txt  start_real_deployment.sh  worker.py
backend/application/: __init__.py  services.py  use_cases.py  worker.py
backend/domain/: __init__.py  interfaces.py  models.py  utils.py
backend/infrastructure/: config.py  database.py  models.py  queue_adapter.py  services.py
backend/interfaces/: __init__.py  websocket_manager.py
backend/interfaces/api/: __init__.py  health.py  infrastructure.py  jobs.py  requests.py
backend/jobs/: terraform_runner.sh
backend/presentation/: api.py
backend/utils/: __init__.py  job_status.py  logging_config.py
scripts/: apply-modern.sh  apply-templates.sh  apply.sh  approval-workflow.sh  check-integration.sh  demo.sh  setup.sh  start-uis.sh  watch-templates.sh  watch.sh
terraform/: README.md
terraform/environments/dev/: main.tf  resources.tf  terraform.tfvars.json  variables.tf
terraform/modules/aws-cloudfront/: main.tf  outputs.tf  variables.tf
terraform/modules/aws-ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/aws-rds/: main.tf  outputs.tf  variables.tf
terraform/modules/aws-s3/: main.tf  outputs.tf  variables.tf
terraform/modules/aws-security-group/: main.tf  outputs.tf  variables.tf
terraform/modules/ec2/: main.tf
terraform/modules/s3/: main.tf
terraform/modules/vpc/: main.tf
terraform/templates/api-simple/: README.md  main.tf  outputs.tf  user_data.sh  variables.tf
terraform/templates/web-app-simple/: README.md  main.tf  outputs.tf  variables.tf
terraform/templates/web-app-simple/scripts/: api_setup.sh
terraform/workspaces/001ff85f-92ce-4ea6-b0d1-89b34e27e658/: tfplan
terraform/workspaces/1e8b3903-fc75-4abb-977d-eb6a8a8c887e/: main.tf  outputs.tf
terraform/workspaces/2866006a-86bb-43df-a11b-0bf73587149a/: user_data.tpl
terraform/workspaces/39aac81b-d464-4acf-acd9-7521cd977a96/: outputs.tf  tfplan  variables.tf
terraform/workspaces/528d55cf-5a3d-45ed-92aa-d2ca445746fb/: tfplan
terraform/workspaces/528d55cf-5a3d-45ed-92aa-d2ca445746fb/scripts/: s3_integration.sh
terraform/workspaces/5926b360-40f6-4199-9ebc-28e80d11d5aa/: tfplan
terraform/workspaces/81a1711c-b9b5-42e3-95c0-2e941dd3b0fe/: main.tf  variables.tf
terraform/workspaces/892fc82b-37c0-4e49-8ee9-ffa30e5e9510/: tfplan
terraform/workspaces/99ba9d17-a59d-4db5-8a63-cff2d7a725f6/: tfplan
terraform/workspaces/a2330b7b-48ef-471b-9bd4-9bf131735db1/: tfplan
terraform/workspaces/a358a1bc-e8c2-44f6-a399-79f0e0d7e31c/: README.md  main.tf  outputs.tf
terraform/workspaces/a3b7111a-1927-40db-a06d-20cad71c1e39/: main.tf  tfplan
terraform/workspaces/ae99cf14-127f-4286-b435-f854c84f2f60/: tfplan
terraform/workspaces/test-fix-123/: variables.tf
ui/: .env.example  admin_app.py  app.py  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx
ui/src/components/: AdminRequests.tsx  JobStatus.tsx
ui/src/components/auth/: Login.tsx
ui/src/components/dashboards/: AdminDashboard.tsx  DeveloperDashboard.tsx
ui/src/components/forms/: DeployServiceForm.tsx  SirwanTestS3Form.tsx
ui/src/components/ui/: badge.tsx  button.tsx
ui/src/hooks/: use-toast.ts
ui/src/services/: apiClient.ts
ui/src/store/: appStore.ts
ui/src/types/: react.d.ts
(+2 files in other folders)
